--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 rocket = "0.5.1"
 tokio = { version = "1", features = ["full"] }
 rusqlite = "0.26"
+serde_json = "1.0"
+ethers = "1.0"
