--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 rocket = "0.5.1"
 tokio = { version = "1", features = ["full"] }
 rusqlite = "0.26"
+jsonwebtoken = "8.0"
+serde = "1.0"
 serde_json = "1.0"
+dotenv = "0.15"
+validator = "0.14.0"
 ethers = "1.0"
