--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,8 @@ rocket = "0.5.1"
 tokio = { version = "1", features = ["full"] }
 rusqlite = "0.26"
 jsonwebtoken = "8.0"
-serde = "1.0"
+lettre = { version = "0.10", features = ["smtp-tls", "tokio1"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
 validator = "0.14.0"
